tests/sksl/errors/BadModifiers.glsl
### Compilation failed:

error: 3: 'const' is not permitted here
error: 3: 'in' is not permitted here
error: 3: 'out' is not permitted here
error: 3: 'uniform' is not permitted here
error: 3: 'flat' is not permitted here
error: 3: 'noperspective' is not permitted here
error: 3: 'readonly' is not permitted here
error: 3: 'writeonly' is not permitted here
error: 3: 'coherent' is not permitted here
error: 3: 'volatile' is not permitted here
error: 3: 'restrict' is not permitted here
error: 3: 'buffer' is not permitted here
error: 3: 'varying' is not permitted here
error: 6: 'const' is not permitted here
error: 6: 'uniform' is not permitted here
error: 6: 'flat' is not permitted here
error: 6: 'noperspective' is not permitted here
error: 6: 'readonly' is not permitted here
error: 6: 'writeonly' is not permitted here
error: 6: 'coherent' is not permitted here
error: 6: 'volatile' is not permitted here
error: 6: 'restrict' is not permitted here
error: 6: 'buffer' is not permitted here
error: 6: 'sk_has_side_effects' is not permitted here
error: 6: 'varying' is not permitted here
error: 6: 'inline' is not permitted here
error: 9: 'in uniform' variables only permitted within fragment processors
error: 9: 'varying' is only permitted in runtime effects
error: 9: 'sk_has_side_effects' is not permitted here
error: 9: 'inline' is not permitted here
30 errors
